manifests/core/vault/patch-velero-backup.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
spec:
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: data
