manifests/core/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-ovh-webhook-final"
    haproxy.org/ssl-redirect: "true"
    haproxy.org/auth-tls-verify-client: "required"
    haproxy.org/auth-tls-secret: "haproxy-controller/client-ca-cert"
spec:
  ingressClassName: haproxy
  rules:
  - host: vault.daddyshome.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
  tls:
  - hosts:
    - vault.daddyshome.fr
    secretName: vault-tls-ovh
